tests/snapshots/parser/snapshots/snapshot_parser__snapshots__parser__snapshot_0059_module_missing_lbrace_contextual.snap
---
source: tests/snapshots/parser/mod.rs
expression: output
---
Parse Errors:
  - Diagnostic { severity: Error, title: "UNEXPECTED TOKEN", display_title: Some("Missing Module Body"), category: Some(ParserDeclaration), code: Some("E034"), error_type: Some(Compiler), message: Some("This module body needs to start with `{`."), file: None, span: Some(Span { start: Position { line: 2, column: 0 }, end: Position { line: 2, column: 3 } }), labels: [], hints: [Hint { kind: Hint, text: "Module declarations use `module Name { ... }`.", span: None, label: None, file: None }], suggestions: [], hint_chains: [], related: [], phase: None }
