tests/snapshots/parser/snapshots/snapshot_parser__snapshots__parser__snapshot_0059_perform_missing_dot_contextual.snap
---
source: tests/snapshots/parser/mod.rs
expression: output
---
Parse Errors:
  - Diagnostic { severity: Error, title: "UNEXPECTED TOKEN", code: Some("E034"), error_type: Some(Compiler), message: Some("Expected `.` between effect and operation in `perform`."), file: None, span: Some(Span { start: Position { line: 1, column: 19 }, end: Position { line: 1, column: 24 } }), labels: [], hints: [Hint { kind: Hint, text: "Perform expressions use `perform Effect.op(args...)`.", span: None, label: None, file: None }], suggestions: [], hint_chains: [], related: [], phase: None }
