tests/snapshots/parser/snapshots/snapshot_parser__snapshots__parser__snapshot_array_literal.snap
---
source: tests/snapshots/parser/mod.rs
expression: output
---
Program {
    statements: [
        Let {
            is_public: false,
            name: Symbol(
                0,
            ),
            type_annotation: None,
            value: ListLiteral {
                elements: [
                    Integer {
                        value: 1,
                        span: Span {
                            start: Position {
                                line: 1,
                                column: 11,
                            },
                            end: Position {
                                line: 1,
                                column: 12,
                            },
                        },
                        id: ExprId(
                            1,
                        ),
                    },
                    Infix {
                        left: Integer {
                            value: 2,
                            span: Span {
                                start: Position {
                                    line: 1,
                                    column: 14,
                                },
                                end: Position {
                                    line: 1,
                                    column: 15,
                                },
                            },
                            id: ExprId(
                                2,
                            ),
                        },
                        operator: "+",
                        right: Integer {
                            value: 3,
                            span: Span {
                                start: Position {
                                    line: 1,
                                    column: 18,
                                },
                                end: Position {
                                    line: 1,
                                    column: 19,
                                },
                            },
                            id: ExprId(
                                3,
                            ),
                        },
                        span: Span {
                            start: Position {
                                line: 1,
                                column: 14,
                            },
                            end: Position {
                                line: 1,
                                column: 19,
                            },
                        },
                        id: ExprId(
                            4,
                        ),
                    },
                    Call {
                        function: Identifier {
                            name: Symbol(
                                1,
                            ),
                            span: Span {
                                start: Position {
                                    line: 1,
                                    column: 21,
                                },
                                end: Position {
                                    line: 1,
                                    column: 24,
                                },
                            },
                            id: ExprId(
                                5,
                            ),
                        },
                        arguments: [
                            Integer {
                                value: 4,
                                span: Span {
                                    start: Position {
                                        line: 1,
                                        column: 25,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 26,
                                    },
                                },
                                id: ExprId(
                                    6,
                                ),
                            },
                        ],
                        span: Span {
                            start: Position {
                                line: 1,
                                column: 21,
                            },
                            end: Position {
                                line: 1,
                                column: 27,
                            },
                        },
                        id: ExprId(
                            7,
                        ),
                    },
                    ListLiteral {
                        elements: [
                            Integer {
                                value: 5,
                                span: Span {
                                    start: Position {
                                        line: 1,
                                        column: 30,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 31,
                                    },
                                },
                                id: ExprId(
                                    8,
                                ),
                            },
                            Integer {
                                value: 6,
                                span: Span {
                                    start: Position {
                                        line: 1,
                                        column: 33,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 34,
                                    },
                                },
                                id: ExprId(
                                    9,
                                ),
                            },
                        ],
                        span: Span {
                            start: Position {
                                line: 1,
                                column: 29,
                            },
                            end: Position {
                                line: 1,
                                column: 35,
                            },
                        },
                        id: ExprId(
                            10,
                        ),
                    },
                ],
                span: Span {
                    start: Position {
                        line: 1,
                        column: 10,
                    },
                    end: Position {
                        line: 1,
                        column: 36,
                    },
                },
                id: ExprId(
                    11,
                ),
            },
            span: Span {
                start: Position {
                    line: 1,
                    column: 0,
                },
                end: Position {
                    line: 1,
                    column: 37,
                },
            },
        },
    ],
    span: Span {
        start: Position {
            line: 1,
            column: 0,
        },
        end: Position {
            line: 1,
            column: 37,
        },
    },
}
