tests/snapshots/parser/snapshots/snapshot_parser__snapshots__parser__snapshot_complex_operators.snap
---
source: tests/snapshots/parser/mod.rs
expression: output
---
Program {
    statements: [
        Let {
            name: Symbol(
                0,
            ),
            type_annotation: None,
            value: Infix {
                left: Infix {
                    left: Infix {
                        left: Infix {
                            left: Identifier {
                                name: Symbol(
                                    1,
                                ),
                                span: Span {
                                    start: Position {
                                        line: 1,
                                        column: 14,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 15,
                                    },
                                },
                            },
                            operator: "+",
                            right: Identifier {
                                name: Symbol(
                                    2,
                                ),
                                span: Span {
                                    start: Position {
                                        line: 1,
                                        column: 18,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 19,
                                    },
                                },
                            },
                            span: Span {
                                start: Position {
                                    line: 1,
                                    column: 14,
                                },
                                end: Position {
                                    line: 1,
                                    column: 19,
                                },
                            },
                        },
                        operator: "*",
                        right: Identifier {
                            name: Symbol(
                                3,
                            ),
                            span: Span {
                                start: Position {
                                    line: 1,
                                    column: 23,
                                },
                                end: Position {
                                    line: 1,
                                    column: 24,
                                },
                            },
                        },
                        span: Span {
                            start: Position {
                                line: 1,
                                column: 14,
                            },
                            end: Position {
                                line: 1,
                                column: 24,
                            },
                        },
                    },
                    operator: "/",
                    right: Identifier {
                        name: Symbol(
                            4,
                        ),
                        span: Span {
                            start: Position {
                                line: 1,
                                column: 27,
                            },
                            end: Position {
                                line: 1,
                                column: 28,
                            },
                        },
                    },
                    span: Span {
                        start: Position {
                            line: 1,
                            column: 14,
                        },
                        end: Position {
                            line: 1,
                            column: 28,
                        },
                    },
                },
                operator: "-",
                right: Infix {
                    left: Identifier {
                        name: Symbol(
                            5,
                        ),
                        span: Span {
                            start: Position {
                                line: 1,
                                column: 31,
                            },
                            end: Position {
                                line: 1,
                                column: 32,
                            },
                        },
                    },
                    operator: "%",
                    right: Identifier {
                        name: Symbol(
                            6,
                        ),
                        span: Span {
                            start: Position {
                                line: 1,
                                column: 35,
                            },
                            end: Position {
                                line: 1,
                                column: 36,
                            },
                        },
                    },
                    span: Span {
                        start: Position {
                            line: 1,
                            column: 31,
                        },
                        end: Position {
                            line: 1,
                            column: 36,
                        },
                    },
                },
                span: Span {
                    start: Position {
                        line: 1,
                        column: 14,
                    },
                    end: Position {
                        line: 1,
                        column: 36,
                    },
                },
            },
            span: Span {
                start: Position {
                    line: 1,
                    column: 0,
                },
                end: Position {
                    line: 1,
                    column: 37,
                },
            },
        },
    ],
    span: Span {
        start: Position {
            line: 1,
            column: 0,
        },
        end: Position {
            line: 1,
            column: 37,
        },
    },
}
