tests/snapshots/parser/snapshots/snapshot_parser__snapshots__parser__snapshot_function_call_chain.snap
---
source: tests/snapshots/parser/mod.rs
expression: output
---
Program {
    statements: [
        Expression {
            expression: Call {
                function: MemberAccess {
                    object: Call {
                        function: MemberAccess {
                            object: Call {
                                function: Identifier {
                                    name: Symbol(
                                        0,
                                    ),
                                    span: Span {
                                        start: Position {
                                            line: 1,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 3,
                                        },
                                    },
                                    id: ExprId(
                                        1,
                                    ),
                                },
                                arguments: [],
                                span: Span {
                                    start: Position {
                                        line: 1,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 5,
                                    },
                                },
                                id: ExprId(
                                    2,
                                ),
                            },
                            member: Symbol(
                                1,
                            ),
                            span: Span {
                                start: Position {
                                    line: 1,
                                    column: 0,
                                },
                                end: Position {
                                    line: 1,
                                    column: 9,
                                },
                            },
                            id: ExprId(
                                3,
                            ),
                        },
                        arguments: [],
                        span: Span {
                            start: Position {
                                line: 1,
                                column: 0,
                            },
                            end: Position {
                                line: 1,
                                column: 11,
                            },
                        },
                        id: ExprId(
                            4,
                        ),
                    },
                    member: Symbol(
                        2,
                    ),
                    span: Span {
                        start: Position {
                            line: 1,
                            column: 0,
                        },
                        end: Position {
                            line: 1,
                            column: 15,
                        },
                    },
                    id: ExprId(
                        5,
                    ),
                },
                arguments: [
                    Integer {
                        value: 1,
                        span: Span {
                            start: Position {
                                line: 1,
                                column: 16,
                            },
                            end: Position {
                                line: 1,
                                column: 17,
                            },
                        },
                        id: ExprId(
                            6,
                        ),
                    },
                    Integer {
                        value: 2,
                        span: Span {
                            start: Position {
                                line: 1,
                                column: 19,
                            },
                            end: Position {
                                line: 1,
                                column: 20,
                            },
                        },
                        id: ExprId(
                            7,
                        ),
                    },
                ],
                span: Span {
                    start: Position {
                        line: 1,
                        column: 0,
                    },
                    end: Position {
                        line: 1,
                        column: 21,
                    },
                },
                id: ExprId(
                    8,
                ),
            },
            has_semicolon: true,
            span: Span {
                start: Position {
                    line: 1,
                    column: 0,
                },
                end: Position {
                    line: 1,
                    column: 22,
                },
            },
        },
    ],
    span: Span {
        start: Position {
            line: 1,
            column: 0,
        },
        end: Position {
            line: 1,
            column: 22,
        },
    },
}
