tests/snapshots/parser/snapshots/snapshot_parser__snapshots__parser__snapshot_function_definition.snap
---
source: tests/snapshots/parser/mod.rs
expression: output
---
Program {
    statements: [
        Function {
            is_public: false,
            fip: None,
            intrinsic: None,
            name: Symbol(
                0,
            ),
            type_params: [],
            parameters: [
                Symbol(
                    1,
                ),
                Symbol(
                    2,
                ),
            ],
            parameter_types: [
                None,
                None,
            ],
            return_type: None,
            effects: [],
            body: Block {
                statements: [
                    Return {
                        value: Some(
                            Infix {
                                left: Identifier {
                                    name: Symbol(
                                        1,
                                    ),
                                    span: Span {
                                        start: Position {
                                            line: 3,
                                            column: 11,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 12,
                                        },
                                    },
                                    id: ExprId(
                                        1,
                                    ),
                                },
                                operator: "+",
                                right: Identifier {
                                    name: Symbol(
                                        2,
                                    ),
                                    span: Span {
                                        start: Position {
                                            line: 3,
                                            column: 15,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 16,
                                        },
                                    },
                                    id: ExprId(
                                        2,
                                    ),
                                },
                                span: Span {
                                    start: Position {
                                        line: 3,
                                        column: 11,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 16,
                                    },
                                },
                                id: ExprId(
                                    3,
                                ),
                            },
                        ),
                        span: Span {
                            start: Position {
                                line: 3,
                                column: 4,
                            },
                            end: Position {
                                line: 3,
                                column: 17,
                            },
                        },
                    },
                ],
                span: Span {
                    start: Position {
                        line: 2,
                        column: 13,
                    },
                    end: Position {
                        line: 4,
                        column: 1,
                    },
                },
            },
            span: Span {
                start: Position {
                    line: 2,
                    column: 0,
                },
                end: Position {
                    line: 2,
                    column: 12,
                },
            },
            id: ExprId(
                4,
            ),
        },
    ],
    span: Span {
        start: Position {
            line: 2,
            column: 0,
        },
        end: Position {
            line: 5,
            column: 0,
        },
    },
}
