tests/snapshots/parser/snapshots/snapshot_parser__snapshots__parser__snapshot_hash_literal.snap
---
source: tests/snapshots/parser/mod.rs
expression: output
---
Program {
    statements: [
        Let {
            name: Symbol(
                0,
            ),
            type_annotation: None,
            value: Hash {
                pairs: [
                    (
                        Identifier {
                            name: Symbol(
                                1,
                            ),
                            span: Span {
                                start: Position {
                                    line: 1,
                                    column: 11,
                                },
                                end: Position {
                                    line: 1,
                                    column: 15,
                                },
                            },
                            id: ExprId(
                                1,
                            ),
                        },
                        String {
                            value: "Alice",
                            span: Span {
                                start: Position {
                                    line: 1,
                                    column: 17,
                                },
                                end: Position {
                                    line: 1,
                                    column: 24,
                                },
                            },
                            id: ExprId(
                                2,
                            ),
                        },
                    ),
                    (
                        Identifier {
                            name: Symbol(
                                2,
                            ),
                            span: Span {
                                start: Position {
                                    line: 1,
                                    column: 26,
                                },
                                end: Position {
                                    line: 1,
                                    column: 29,
                                },
                            },
                            id: ExprId(
                                3,
                            ),
                        },
                        Integer {
                            value: 30,
                            span: Span {
                                start: Position {
                                    line: 1,
                                    column: 31,
                                },
                                end: Position {
                                    line: 1,
                                    column: 33,
                                },
                            },
                            id: ExprId(
                                4,
                            ),
                        },
                    ),
                    (
                        Identifier {
                            name: Symbol(
                                3,
                            ),
                            span: Span {
                                start: Position {
                                    line: 1,
                                    column: 35,
                                },
                                end: Position {
                                    line: 1,
                                    column: 41,
                                },
                            },
                            id: ExprId(
                                5,
                            ),
                        },
                        Hash {
                            pairs: [
                                (
                                    Identifier {
                                        name: Symbol(
                                            4,
                                        ),
                                        span: Span {
                                            start: Position {
                                                line: 1,
                                                column: 44,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 45,
                                            },
                                        },
                                        id: ExprId(
                                            6,
                                        ),
                                    },
                                    Integer {
                                        value: 1,
                                        span: Span {
                                            start: Position {
                                                line: 1,
                                                column: 47,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 48,
                                            },
                                        },
                                        id: ExprId(
                                            7,
                                        ),
                                    },
                                ),
                            ],
                            span: Span {
                                start: Position {
                                    line: 1,
                                    column: 43,
                                },
                                end: Position {
                                    line: 1,
                                    column: 49,
                                },
                            },
                            id: ExprId(
                                8,
                            ),
                        },
                    ),
                ],
                span: Span {
                    start: Position {
                        line: 1,
                        column: 10,
                    },
                    end: Position {
                        line: 1,
                        column: 50,
                    },
                },
                id: ExprId(
                    9,
                ),
            },
            span: Span {
                start: Position {
                    line: 1,
                    column: 0,
                },
                end: Position {
                    line: 1,
                    column: 51,
                },
            },
        },
    ],
    span: Span {
        start: Position {
            line: 1,
            column: 0,
        },
        end: Position {
            line: 1,
            column: 51,
        },
    },
}
