tests/snapshots/parser/snapshots/snapshot_parser__snapshots__parser__snapshot_import_statement.snap
---
source: tests/snapshots/parser/mod.rs
expression: output
---
Parse Errors:
  - Diagnostic { severity: Error, title: "EXPECTED EXPRESSION", display_title: None, category: Some(ParserExpression), code: Some("E031"), error_type: Some(Compiler), message: Some("Expected expression, found `;`."), file: None, span: Some(Span { start: Position { line: 1, column: 11 }, end: Position { line: 1, column: 12 } }), labels: [], hints: [], suggestions: [], hint_chains: [], related: [], stack_trace: [], phase: None }
  - Diagnostic { severity: Error, title: "EXPECTED EXPRESSION", display_title: None, category: Some(ParserExpression), code: Some("E031"), error_type: Some(Compiler), message: Some("Expected expression, found `;`."), file: None, span: Some(Span { start: Position { line: 1, column: 25 }, end: Position { line: 1, column: 26 } }), labels: [], hints: [], suggestions: [], hint_chains: [], related: [], stack_trace: [], phase: None }
